--- a/examples/departures-webapp/src/app/app.component.scss
+++ b/examples/departures-webapp/src/app/app.component.scss
@@ -1,3 +1,8 @@
+.stop-info {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
