--- a/examples/ojp-playground/src/app/departures/departures.component.html
+++ b/examples/ojp-playground/src/app/departures/departures.component.html
@@ -1,3 +1,9 @@
+<nav>
+  <a routerLink="/playground" routerLinkActive="active" ariaCurrentWhenActive="page">Playground OJP APIs</a> | Departures WebApp
+</nav>
+
+<hr/>
+
 <h2>Departures</h2>
 
 <div class="stop-info" *ngIf="this.renderModel.stop">{{ this.renderModel.stop.name }} ({{ this.renderModel.stop.id }})</div>
