--- a/examples/ojp-playground/src/app/playground/playground.component.html
+++ b/examples/ojp-playground/src/app/playground/playground.component.html
@@ -1,3 +1,11 @@
+<nav>
+    Playground OJP APIs | <a routerLink="/departures" routerLinkActive="active" ariaCurrentWhenActive="page">Departures WebApp</a>
+</nav>
+  
+<hr/>
+
 <h2>Playground OJP APIs</h2>
 
-Open DeveloperTools console to see the results
+<div>
+    Open DeveloperTools console to see the results
+</div>
